# renovate-repro-pdm-arch-mismatch

./: LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: python-package.yml
