[project]
name = "renovate-repro-pdm-arch-mismatch"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sh-at-cs", email = "112704226+sh-at-cs@users.noreply.github.com"},
]
dependencies = [
    "boto3>=1.35",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Public Domain"}


[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
